# ghost-code

./: .gitignore  README.md  app.py  pyproject.toml
src/ghost_code/: attacks.py  crypto.py  detect.py  diff_viz.py  issue_tokens.py  issue_video_tokens.py  phase1_capture.py  phase1_digital.py  registry.py  robustness.py  screen_extract.py  smoke_test.py  video_io.py  video_watermark.py  visible_detect.py  visible_watermark.py  watermark.py
